Pagos parciales corregidos completamente